@@ -386,13 +386,13 @@ function months_to_visit() {
 	$months     = get_post_meta( get_the_ID(), 'best_time_to_visit', true );
 	$month_list = array();
 
-	foreach ( $months as $single_month ) {
+	foreach ( (array) $months as $single_month ) {
 		$single_month = str_split( $single_month, 3 );
 		$month_list[] = '<span>' . $single_month[0] .
 		'</span>';
 	}
 
-	if ( ! empty( $month_list ) ) {
+	if ( ! empty( $months ) ) {
 		echo '<span class="' . esc_attr( $meta_class ) . 'best-time" style="text-transform:capitalize;"><span class="lsx-to-meta-data-key">' . esc_html__( 'Best Time', 'tour-operator' ) . ': </span>';
 		echo implode( ', ', wp_kses_post( $month_list ) );
 		echo '</span>';
