@@ -636,7 +636,7 @@ if ( ! function_exists( 'lsx_to_gallery' ) ) {
 				} else {
 					// WordPress Gallery
 					$columns = 3;
-					$return = do_shortcode( '[gallery ids="' . implode( ',', $gallery_ids ) . '" type="square" size="lsx-thumbnail-wide" columns="' . $columns . '" link="file"]' );
+					$return = do_shortcode( '[gallery ids="' . implode( ',', $gallery_ids ) . '" size="large" columns="' . $columns . '" link="file"]' );
 				}
 			}
 
